syntax = "proto3";
package dastchain.dastchain;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "dastchain/dastchain/params.proto";

option go_package = "dastchain/x/dastchain/types";

// GenesisState defines the dastchain module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}
